--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,10 @@ cffi==1.10.0
 chardet==3.0.4
 coverage==4.4.2
 cryptography==2.0.3
+cycler==0.10.0
 decorator==4.1.2
 docutils==0.14
 entrypoints==0.2.3
-geopy==1.11.0
 h5py==2.7.1
 html5lib==0.999999999
 idna==2.6
@@ -28,6 +28,7 @@ jupyter-client==5.1.0
 jupyter-core==4.3.0
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+matplotlib==2.1.1
 mccabe==0.6.1
 mistune==0.8.1
 nbconvert==5.3.1
@@ -47,6 +48,7 @@ pyflakes==1.6.0
 Pygments==2.2.0
 pylint==1.7.4
 pyOpenSSL==17.2.0
+pyparsing==2.2.0
 PySocks==1.6.7
 python-dateutil==2.6.1
 pytz==2017.2
