--- a/climada/config/defaults.conf
+++ b/climada/config/defaults.conf
@@ -1,9 +1,9 @@
 {
     "local_data":
     {
-        "repository_dir": "../../../data/climada_repo/",
-        "save_dir": "../../../data/results/",
-        "entity_def" : "../../../data/demo/entity_template.xlsx"
+        "repository_dir": "./data/climada_repo/",
+        "save_dir": "./data/results/",
+        "entity_def" : "./data/demo/entity_template.xlsx"
     },
     
     "present_ref_year": 2016,
