--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ coverage==4.4.2
 cryptography==2.0.3
 cycler==0.10.0
 decorator==4.1.2
+dill==0.2.7.1
 docutils==0.14
 entrypoints==0.2.3
 h5py==2.7.1
@@ -24,21 +25,26 @@ isort==4.2.15
 jedi==0.10.2
 Jinja2==2.9.6
 jsonschema==2.6.0
-jupyter-client==5.1.0
-jupyter-core==4.3.0
+jupyter-client==5.2.2
+jupyter-core==4.4.0
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 matplotlib==2.1.1
 mccabe==0.6.1
 mistune==0.8.1
+multiprocess==0.70.5
 nbconvert==5.3.1
 nbformat==4.4.0
+notebook==5.3.1
 numpy==1.13.3
 numpydoc==0.7.0
 pandas==0.21.1
 pandocfilters==1.4.2
+pathos==0.2.1
 pexpect==4.2.1
 pickleshare==0.7.4
+pox==0.2.3
+ppft==1.6.4.7.1
 prompt-toolkit==1.0.15
 psutil==5.4.0
 ptyprocess==0.5.2
@@ -60,12 +66,14 @@ requests==2.18.4
 rope==0.10.5
 scikit-learn==0.19.1
 scipy==1.0.0
+Send2Trash==1.4.2
 simplegeneric==0.8.1
 six==1.11.0
 snowballstemmer==1.2.1
 Sphinx==1.6.3
 sphinxcontrib-websupport==1.0.1
 spyder==3.2.4
+terminado==0.8.1
 testpath==0.3.1
 tornado==4.5.2
 traitlets==4.3.2
