--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ asn1crypto==0.22.0
 astroid==1.5.3
 Babel==2.5.0
 bleach==2.0.0
-certifi==2017.7.27.1
+Cartopy==0.16.0
+certifi==2018.1.18
 cffi==1.10.0
 chardet==3.0.4
 coverage==4.4.2
@@ -28,6 +29,7 @@ jsonschema==2.6.0
 jupyter-client==5.2.2
 jupyter-core==4.4.0
 lazy-object-proxy==1.3.1
+lxml==4.1.1
 MarkupSafe==1.0
 matplotlib==2.1.1
 mccabe==0.6.1
@@ -38,11 +40,14 @@ nbformat==4.4.0
 notebook==5.3.1
 numpy==1.13.3
 numpydoc==0.7.0
+olefile==0.45.1
+OWSLib==0.16.0
 pandas==0.21.1
 pandocfilters==1.4.2
 pathos==0.2.1
 pexpect==4.2.1
 pickleshare==0.7.4
+Pillow==5.0.0
 pox==0.2.3
 ppft==1.6.4.7.1
 prompt-toolkit==1.0.15
@@ -50,11 +55,14 @@ psutil==5.4.0
 ptyprocess==0.5.2
 pycodestyle==2.3.1
 pycparser==2.18
+pyepsg==0.3.2
 pyflakes==1.6.0
 Pygments==2.2.0
 pylint==1.7.4
 pyOpenSSL==17.2.0
 pyparsing==2.2.0
+pyproj==1.9.5.1
+pyshp==1.2.12
 PySocks==1.6.7
 python-dateutil==2.6.1
 pytz==2017.2
@@ -67,6 +75,7 @@ rope==0.10.5
 scikit-learn==0.19.1
 scipy==1.0.0
 Send2Trash==1.4.2
+Shapely==1.6.2
 simplegeneric==0.8.1
 six==1.11.0
 snowballstemmer==1.2.1
