--- a/requirements.txt
+++ b/requirements.txt
@@ -1,95 +1,16 @@
-alabaster==0.7.10
-appnope==0.1.0
-asn1crypto==0.22.0
-astroid==1.5.3
-Babel==2.5.0
-bleach==2.0.0
 Cartopy==0.16.0
 certifi==2018.1.18
-cffi==1.10.0
-chardet==3.0.4
-coverage==4.4.2
-cryptography==2.0.3
-cycler==0.10.0
-decorator==4.1.2
-dill==0.2.7.1
-docutils==0.14
-entrypoints==0.2.3
-h5py==2.7.1
-html5lib==0.999999999
-idna==2.6
-imagesize==0.7.1
-ipykernel==4.6.1
-ipython==6.1.0
-ipython-genutils==0.2.0
-isort==4.2.15
-jedi==0.10.2
-Jinja2==2.9.6
-jsonschema==2.6.0
-jupyter-client==5.2.2
-jupyter-core==4.4.0
-lazy-object-proxy==1.3.1
-lxml==4.1.1
-MarkupSafe==1.0
-matplotlib==2.1.1
-mccabe==0.6.1
-mistune==0.8.1
-multiprocess==0.70.5
-nbconvert==5.3.1
-nbformat==4.4.0
-notebook==5.3.1
-numpy==1.13.3
-numpydoc==0.7.0
-olefile==0.45.1
-OWSLib==0.16.0
-pandas==0.21.1
-pandocfilters==1.4.2
+Cython==0.27.3
+h5py==2.8.0rc1
+matplotlib==2.2.0
+numpy==1.14.1
+pandas==0.22.0
 pathos==0.2.1
-pexpect==4.2.1
-pickleshare==0.7.4
-Pillow==5.0.0
-pox==0.2.3
-ppft==1.6.4.7.1
-prompt-toolkit==1.0.15
-psutil==5.4.0
-ptyprocess==0.5.2
-pycodestyle==2.3.1
-pycparser==2.18
-pyepsg==0.3.2
-pyflakes==1.6.0
-Pygments==2.2.0
-pylint==1.7.4
-pyOpenSSL==17.2.0
-pyparsing==2.2.0
-pyproj==1.9.5.1
 pyshp==1.2.12
-PySocks==1.6.7
-python-dateutil==2.6.1
-pytz==2017.2
-pyzmq==16.0.2
-QtAwesome==0.4.4
-qtconsole==4.3.1
-QtPy==1.3.1
-requests==2.18.4
-rope==0.10.5
 scikit-learn==0.19.1
 scipy==1.0.0
-Send2Trash==1.4.2
-Shapely==1.6.2
-simplegeneric==0.8.1
+Shapely==1.6.4.post1
 six==1.11.0
-snowballstemmer==1.2.1
-Sphinx==1.6.3
-sphinxcontrib-websupport==1.0.1
-spyder==3.2.4
-terminado==0.8.1
-testpath==0.3.1
-tornado==4.5.2
-traitlets==4.3.2
-typing==3.6.2
-urllib3==1.22
-wcwidth==0.1.7
-webencodings==0.5.1
-wrapt==1.10.11
+virtualenv==15.1.0
 xlrd==1.1.0
 xmlrunner==1.7.7
