--- a/climada/conf/defaults.conf
+++ b/climada/conf/defaults.conf
@@ -2,7 +2,8 @@
     "local_data":
     {
         "save_dir": "./results/",
-        "entity_def" : ""
+        "entity_def": "",
+        "repository": "/Users/aznarsig/polybox/Shared/climada_data/"
     },
     
     "present_ref_year": 2016,
