--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ matplotlib==2.2.0
 numpy==1.14.1
 pandas==0.22.0
 pathos==0.2.1
+pint==0.8.1
 pyshp==1.2.12
 scikit-learn==0.19.1
 scipy==1.0.0
 Shapely==1.6.2
 six==1.11.0
 virtualenv==15.1.0
+xarray==0.10.2
 xlrd==1.1.0
 xmlrunner==1.7.7
