Set up configuration file to dont cotain repository folder.

--- a/climada/conf/defaults.conf
+++ b/climada/conf/defaults.conf
@@ -3,7 +3,7 @@
     {
         "save_dir": "./results/",
         "entity_def": "",
-        "repository": "/Users/aznarsig/polybox/Shared/climada_data/"
+        "repository": ""
     },
     
     "present_ref_year": 2016,
