Add tc_time_step_h parameter, change default repository folder to DATA_DIR.

--- a/climada/conf/defaults.conf
+++ b/climada/conf/defaults.conf
@@ -8,5 +8,7 @@
     
     "present_ref_year": 2016,
     
-    "future_ref_year": 2030
+    "future_ref_year": 2030,
+    
+    "tc_time_step_h": 1
 }
