--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,16 @@
 Cartopy==0.16.0
-certifi==2018.1.18
 Cython==0.27.3
 h5py==2.8.0rc1
-matplotlib==2.2.0
-numpy==1.14.1
-pandas==0.22.0
+matplotlib==2.2.2
+numpy==1.14.2
+numba==0.37.0
+pandas==0.23.0
 pathos==0.2.1
 pint==0.8.1
 pyshp==1.2.12
 scikit-learn==0.19.1
-scipy==1.0.0
-Shapely==1.6.2
-six==1.11.0
-virtualenv==15.1.0
+scipy==1.1.0
+Shapely==1.6.4
 xarray==0.10.2
 xlrd==1.1.0
 xmlrunner==1.7.7
