--- a/environment_docs.yml
+++ b/environment_docs.yml
@@ -53,6 +53,7 @@ dependencies:
   - nbconvert=5.3.1
   - nbformat=4.4.0
   - notebook=5.3.1
+  - numba==0.37.0
   - numpy=1.13.3
   - numpydoc=0.7.0
   - olefile=0.45.1
