Change test data location. Refactor configuration file.

--- a/climada/conf/defaults.conf
+++ b/climada/conf/defaults.conf
@@ -6,11 +6,16 @@
         "repository": ""
     },
     
-    "present_ref_year": 2016,
-    
-    "future_ref_year": 2030,
-    
-    "tc_time_step_h": 1,
+    "entity":
+    {
+        "present_ref_year": 2016,
+        "future_ref_year": 2030
+    },
+
+    "trop_cyclone":
+    {
+        "time_step_h": 1
+    },
 
     "log_level": "INFO"
 }
