--- a/requirements/env_docs.yml
+++ b/requirements/env_docs.yml
@@ -110,6 +110,7 @@ dependencies:
   - testpath=0.3.1
   - tk=8.6.7
   - tornado=4.5.2
+  - tqdm=4.23.4
   - traitlets=4.3.2
   - typing=3.6.2
   - urllib3=1.22
@@ -130,4 +131,4 @@ dependencies:
     - pox==0.2.3
     - ppft==1.6.4.7.1
     - xmlrunner==1.7.7
-
+    - pycountry==18.5.26
