update documentation to current installation and configuration file.

--- a/climada/conf/defaults.conf
+++ b/climada/conf/defaults.conf
@@ -5,6 +5,8 @@
         "entity_def": "",
         "repository": ""
     },
+
+    "log_level": "INFO",
     
     "entity":
     {
@@ -15,7 +17,5 @@
     "trop_cyclone":
     {
         "time_step_h": 1
-    },
-
-    "log_level": "INFO"
+    }
 }
