--- a/climada/conf/defaults.conf
+++ b/climada/conf/defaults.conf
@@ -7,15 +7,20 @@
     },
 
     "log_level": "INFO",
-    
+
     "entity":
     {
         "present_ref_year": 2016,
-        "future_ref_year": 2030
+        "future_ref_year": 2030,
+        "black_marble":
+        {
+            "nightlight_url": "https://ngdc.noaa.gov/eog/data/web_data/v4composites/"
+        }
     },
 
     "trop_cyclone":
     {
-        "time_step_h": 1
+        "time_step_h": 1,
+        "random_seed": 54
     }
 }
