implemented BlackMarble exposure nightlight model from ngdc.noaa site.

--- a/climada/conf/defaults.conf
+++ b/climada/conf/defaults.conf
@@ -14,7 +14,7 @@
         "future_ref_year": 2030,
         "black_marble":
         {
-            "nightlight_url": "https://ngdc.noaa.gov/eog/data/web_data/v4composites/"
+            "nl_noaa_url": "https://ngdc.noaa.gov/eog/data/web_data/v4composites/"
         }
     },
 
