remove NOAA nightlights from configuration file. small corrections.

--- a/climada/conf/defaults.conf
+++ b/climada/conf/defaults.conf
@@ -11,11 +11,7 @@
     "entity":
     {
         "present_ref_year": 2016,
-        "future_ref_year": 2030,
-        "black_marble":
-        {
-            "nl_noaa_url": "https://ngdc.noaa.gov/eog/data/web_data/v4composites/"
-        }
+        "future_ref_year": 2030
     },
 
     "trop_cyclone":
