add configuration parameters for impact and adapataion computations

--- a/climada/conf/defaults.conf
+++ b/climada/conf/defaults.conf
@@ -6,7 +6,7 @@
         "repository": ""
     },
 
-    "log_level": "INFO",
+    "log_level": "DEBUG",
 
     "entity":
     {
@@ -18,5 +18,16 @@
     {
         "time_step_h": 1,
         "random_seed": 54
+    },
+
+    "impact":
+    {
+        "max_matrix_size": 1.0e8
+    },
+
+    "adaptation":
+    {
+        "impact_time_dependence": 1.0
     }
+    
 }
