--- a/requirements/env_climada.yml
+++ b/requirements/env_climada.yml
@@ -5,6 +5,7 @@ dependencies:
   - cartopy=0.16.0
   - dill==0.2.7.1
   - geos=3.6.2
+  - gdal=2.3.1
   - h5py=2.7.1
   - jsonschema=2.6.0
   - matplotlib=2.2.2
