--- a/requirements/env_climada.yml
+++ b/requirements/env_climada.yml
@@ -26,6 +26,7 @@ dependencies:
   - scipy=1.1.0
   - setuptools=39.1.0
   - shapely=1.6.4
+  - tqdm=4.23.4
   - xarray=0.10.2
   - pip:
     - iso3166==0.9
