--- a/requirements/env_climada.yml
+++ b/requirements/env_climada.yml
@@ -28,6 +28,7 @@ dependencies:
   - shapely=1.6.4
   - tqdm=4.23.4
   - xarray=0.10.2
+  - xlrd=1.1.0
   - pip:
     - iso3166==0.9
     - multiprocess==0.70.5
