add return periods inputs for exceedance frequency curve

--- a/climada/conf/defaults.conf
+++ b/climada/conf/defaults.conf
@@ -6,7 +6,11 @@
         "repository": ""
     },
 
-    "log_level": "DEBUG",
+    "global":
+    {
+        "log_level": "DEBUG",
+        "max_matrix_size": 1.0e8
+    },
 
     "entity":
     {
@@ -20,12 +24,7 @@
         "random_seed": 54
     },
 
-    "impact":
-    {
-        "max_matrix_size": 1.0e8
-    },
-
-    "adaptation":
+    "cost_benefit":
     {
         "impact_time_dependence": 1.0
     }
