Remove time_step_h default value from configuration file

--- a/climada/conf/defaults.conf
+++ b/climada/conf/defaults.conf
@@ -8,7 +8,7 @@
 
     "global":
     {
-        "log_level": "DEBUG",
+        "log_level": "INFO",
         "max_matrix_size": 1.0e8
     },
 
@@ -20,7 +20,6 @@
 
     "trop_cyclone":
     {
-        "time_step_h": 1,
         "random_seed": 54
     },
 
