remove unnecessary configuration parameters

--- a/climada/conf/defaults.conf
+++ b/climada/conf/defaults.conf
@@ -2,8 +2,7 @@
     "local_data":
     {
         "save_dir": "./results/",
-        "entity_def": "",
-        "repository": ""
+        "entity_def": ""
     },
 
     "global":
@@ -12,20 +11,9 @@
         "max_matrix_size": 1.0e8
     },
 
-    "entity":
-    {
-        "present_ref_year": 2016,
-        "future_ref_year": 2030
-    },
-
     "trop_cyclone":
     {
         "random_seed": 54
-    },
-
-    "cost_benefit":
-    {
-        "impact_time_dependence": 1.0
     }
     
 }
