Change Exposures class: it is a GeoDataFrame now.

--- a/climada/conf/defaults.conf
+++ b/climada/conf/defaults.conf
@@ -1,13 +1,12 @@
 {
     "local_data":
     {
-        "save_dir": "./results/",
-        "entity_def": ""
+        "save_dir": "./results/"
     },
 
     "global":
     {
-        "log_level": "INFO",
+        "log_level": "DEBUG",
         "max_matrix_size": 1.0e8
     },
 
