--- a/requirements/env_climada.yml
+++ b/requirements/env_climada.yml
@@ -22,6 +22,7 @@ dependencies:
   - proj4
   - pysocks=1.6.8
   - pyshp=1.2.12
+  - pytables=3.4.4
   - python=3.6.5
   - requests=2.19.1
   - scikit-learn=0.19.1
