--- a/requirements/env_climada.yml
+++ b/requirements/env_climada.yml
@@ -33,6 +33,7 @@ dependencies:
   - tqdm=4.23.4
   - xarray=0.10.2
   - xlrd=1.1.0
+  - xlsxwriter=1.1.2
   - pip:
     - iso3166==0.9
     - multiprocess==0.70.5
